Fix spacing on buttons

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -28,4 +28,8 @@
     font-family: 'Overpass', sans-serif;
     margin-bottom: 2.5rem;
   }
+
+  .btn {
+    margin: 0 .5rem;
+  }
 }
